--- a/web/package.json
+++ b/web/package.json
@@ -12,11 +12,12 @@
     "@chakra-ui/react": "^1.6.9",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "axios": "^0.22.0",
+    "axios": "0.21.1",
     "framer-motion": "^4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-query": "^3.26.0"
   },
   "devDependencies": {
