--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:aumSH6Pftp0opyf2N3Xjcf09vjoOvY4IvW/2WKhVSVw=
 APP_DEBUG=true
-APP_URL=http://bkrm.test
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=bkrm_v2
+DB_DATABASE=main
 DB_USERNAME=root
 DB_PASSWORD=
 
