--- a/web/package.json
+++ b/web/package.json
@@ -12,13 +12,17 @@
     "@chakra-ui/react": "^1.6.9",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "add": "^2.0.6",
     "axios": "0.21.1",
+    "date-fns": "^2.25.0",
     "framer-motion": "^4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "react-query": "^3.26.0"
+    "react-query": "^3.26.0",
+    "yarn": "^1.22.17",
+    "zustand": "^3.5.13"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
