--- a/android app/.gitignore
+++ b/android app/.gitignore
@@ -14,7 +14,9 @@
 *.ipr
 *.iws
 .idea/
-
+.gradle
+gradlew
+gradlew.bat
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
@@ -30,7 +32,7 @@
 .pub-cache/
 .pub/
 /build/
-
+/gradle
 # Web related
 lib/generated_plugin_registrant.dart
 
