--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -22,7 +22,7 @@
 			"@api": ["src/api"],
 			"@helper": ["src/helper"],
 			"@@types": ["src/types/index"],
-			"@store": ["src/store/index"]
+			"@store": ["src/store"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
