--- a/web/package.json
+++ b/web/package.json
@@ -30,7 +30,7 @@
 		"@types/react": "17.0.27",
 		"@typescript-eslint/eslint-plugin": "^5.9.0",
 		"@typescript-eslint/parser": "^5.9.0",
-		"eslint": "^8.0.1",
+		"eslint": "7.32.0",
 		"eslint-config-next": "11.1.2",
 		"eslint-plugin-react": "^7.28.0",
 		"typescript": "4.4.3"
