--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -23,7 +23,8 @@
 			"@helper": ["src/helper"],
 			"@@types": ["src/types/index"],
 			"@store": ["src/store"],
-			"@constants": ["src/constants"]
+			"@constants": ["src/constants"],
+			"@api-client": ["src/api/client"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
